# gemini-git-browser

./: .drone.yml  .gitignore  Cargo.toml  README.md
deploy/: app-config.sh  deploy.sh
deploy/docker/: Dockerfile  docker-compose.yml
deploy/environments/development/: config.sh
deploy/environments/development/assets/: config.toml
deploy/environments/development/docker/: Dockerfile
deploy/environments/dockerhub/: config.sh
deploy/environments/dockerhub/docker/: Dockerfile  docker-compose.yml
deploy/environments/production/: config.sh
deploy/environments/production/assets/: config.toml  robots.txt
deploy/environments/production/docker/: docker-compose.yml
src/: lib.rs  main.rs  repo.rs  util.rs
src/test/: mod.rs
static/: robots.txt
templates/: index.hbs  ns.hbs  repo.hbs  tree.hbs
tests/resources/: README.gmi
