[package]
name = "gemini-git-browser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
northstar = "0.4.0"
futures-core = "0.3.15"
futures-util = "0.3.15"
anyhow = "1.0.41"
tokio = { version = "0.3.1", features = ["full"] }
handlebars = "4.0.1"
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
git2 = "0.13.20"
lazy_static = "1.4"
mime = "0.3"
confy = "0.4"